# TelegramMessageIndex

./: .clang-format  .gitignore  CMakeLists.txt  Functions.cpp  Functions.h  README.md  TelegramClientCore.cpp  TelegramClientCore.h  Utils.cpp  Utils.h  main.cpp
Catch2_Test/: CMakeLists.txt  ConfigTest.cpp  ProgramConfigTest.cpp
Config/: ProgramConfig.cpp  ProgramConfig.h
Core/: CoreWarpper.cpp  CoreWarpper.h  MessageQueue.hpp  ObjectManager.cpp  ObjectManager.cppm  ObjectManager.h  PCH.h  TelegramClientCore.cpp  TelegramClientCore.h  TelegramCore.cpp  TelegramCore.cppm  TelegramCore.h
Core/Config/: ConfigManager.cppm  ConfigManager.h  ProgramConfig.cpp  ProgramConfig.cpp_  ProgramConfig.h  ProgramConfig.h_  ProgramConfig.ixx  StorageManager.cppm  StorageManager.h
Core/Functions/: Functions.cpp  Functions.h
Core/Parser/: MessageParser.cpp  MessageParser.h
Core/Register/: ConfigRegister.cppm  ConfigRegister.h  FunctionRegister.cpp  FunctionRegister.h  FunctionRegister.h_  FunctionRegister.ixx  StringRegister.cpp  StringRegister.cppm  StringRegister.h  StringRegister.ixx
Core/Utils/: Configs.cppm  ConsoleCtrlCapturer.cpp  ConsoleCtrlCapturer.cppm  ConsoleCtrlCapturer.h  Logger.cppm  Logger.hpp  TdUtils.cppm  TdUtils.hpp
Parser/: MessageParser.cpp  MessageParser.h
cpp/: README.md  td_example.cpp  tdjson_example.cpp
